[package]
name = "gleiphir"
version = "0.1.0"
authors = ["iovxw <iovxw@outlook.com>"]
edition = '2018'

[dependencies]
libc = "0.2"
nfqueue = { version = "0.9", path = "./nfqueue-rs" }
pnet = "0.21"
pnet_macros_support = "0.21"
pnetlink = "0.0.3"
lazy_static = "1.0"
treebitmap = "0.3"
lru_time_cache = "0.9"
