[package]
name = "gleipnir-interface"
version = "0.1.0"
authors = ["iovxw <iovxw@outlook.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
treebitmap = "0.4"
nix = "0.13"
tarpc = { version = "0.18",  features = ["tokio1", "serde1", "serde-transport"], git = "https://github.com/google/tarpc.git" }
futures = "0.3"
tokio = { version = "0.2", features = ["net", "stream"] }
tokio-serde = "0.6"
async-bincode = "0.4"
pin-project = "0.4"
serde = { version = "1.0", features = ["derive"] }
