[package]
name = "gleipnir"
version = "0.1.0"
authors = ["iovxw <iovxw@outlook.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
cstr = "0.1"
cpp = "0.5"
qmetaobject = { version = "0.0", git = "https://github.com/woboq/qmetaobject-rs.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.6"
regex = "1.1"
lazy_static = "1.3"
futures-preview = { version = "0.3.0-alpha.16", features = ["compat"] }
tokio = "0.1"
tarpc = { version = "0.18",  features = ["serde1"] }
gleipnir-interface = { version = "0.1", path = "../gleipnir-interface" }

[build-dependencies]
cpp_build = "0.5"
