[package]
name = "gleipnir"
version = "0.1.0"
authors = ["iovxw <iovxw@outlook.com>"]
edition = "2018"

[dependencies]
jemallocator = "0.3"
failure = "0.1"
cstr = "0.1"
cpp = "0.5"
qmetaobject = { version = "0.1", git = "https://github.com/iovxw/qmetaobject-rs.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7"
regex = "1.0"
lazy_static = "1.3"
futures = { version = "0.3", features = ["compat"] }
tokio = { version = "0.2", features = ["rt-core"] }
tokio-serde = { version = "0.6", features = ["bincode"] }
tarpc = { version = "0.20",  features = ["tokio1", "serde1", "serde-transport"] }
defer = "0.1"
gleipnir-interface = { version = "0.1", path = "../gleipnir-interface" }

[build-dependencies]
cpp_build = "0.5"
