[package]
name = "gleipnird"
version = "0.1.0"
authors = ["iovxw <iovxw@outlook.com>"]
edition = '2018'

[dependencies]
jemallocator = "0.3"
failure = "0.1"
libc = "0.2"
nfq = { version = "0.2", git = "https://github.com/nbdd0121/nfq-rs.git", rev = "b174e2f63f4baac" }
pnet = "0.22"
pnet_macros_support = "0.23"
pnetlink = { version = "0.0.3", git = "https://github.com/polachok/pnetlink.git" }
lazy_static = "1.0"
treebitmap = "0.3"
lru_time_cache = "0.9"
dbus = "0.7"
nix = "0.13"
tarpc = { version = "0.18",  features = ["tokio1", "serde1", "serde-transport"], git = "https://github.com/google/tarpc.git" }
futures = { version = "0.3", features = ["compat"] }
futures-locks = "0.3"
tokio = { version = "0.2", features = ["blocking", "rt-threaded"] }
tokio-serde = { version = "0.6", features = ["bincode"] }
tokio-threadpool = "0.1"
async-bincode = "0.4"
pin-utils = "0.1.0-alpha.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.3"
slab = "0.4"
intervaltree = "0.2"
gleipnir-interface = { version = "0.1", path = "../gleipnir-interface" }
ctrlc = { version = "3.1", features = ["termination"] }

[build-dependencies]
dbus-codegen = "0.4"
