[package]
name = "gleipnird"
version = "0.1.0"
authors = ["iovxw <iovxw@outlook.com>"]
edition = '2018'

[dependencies]
jemallocator = "0.3"
failure = "0.1"
libc = "0.2"
nfq = { version = "0.2", git = "https://github.com/nbdd0121/nfq-rs.git", rev = "c0663baf3113dcd0257" }
pnet = "0.25"
pnet_macros_support = "0.22"
pnetlink = { version = "0.0.3", git = "https://github.com/polachok/pnetlink.git" }
lazy_static = "1.4"
treebitmap = "0.4"
lru_time_cache = "0.11"
dbus = "0.8"
nix = "0.18"
tarpc = { version = "0.22",  features = ["tokio1", "serde1", "serde-transport"] }
futures = { version = "0.3", features = ["compat"] }
futures-locks = "0.5"
tokio = { version = "0.2", features = ["blocking", "rt-threaded"] }
tokio-serde = { version = "0.6", features = ["bincode"] }
tokio-threadpool = "0.1"
async-bincode = "0.5"
pin-utils = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.4"
slab = "0.4"
intervaltree = "0.2"
gleipnir-interface = { version = "0.1", path = "../gleipnir-interface" }
ctrlc = { version = "3.1", features = ["termination"] }

[build-dependencies]
dbus-codegen = "0.5"
